# task_management

./: .env.db.dev  .env.db.example  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yaml  pyproject.toml  run.sh  sonar_project.properties
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 5d290ee2b09c_add_model_task.py  9b30ac6e04f8_create_user_model.py  dd1f2caca7b8_update_model_task.py
app/common/db/: engine.py  session.py
app/config/: create_app.py  logger.py  settings.py
app/config/extensions/: error_code.py  exception_handler.py
app/middleware/: authentication.py  security.py
app/models/: __init__.py  base.py  email.py  permission.py  role.py  role_permission.py  task.py  user.py  user_role.py
app/routers/: __init__.py  authentication.py  employee.py  health.py  role.py  task.py
app/schemas/: role.py  task.py  user.py
app/seed/: __init__.py  seed.py
app/seed/data_seed/: permissions.json  roles.json
app/services/: authentication_service.py  email_service.py
